VM fails to start with CDS enabled but JVMTI disabled

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 15
    • Affects Version/s: 15
    • Component/s: hotspot
    • b13

      This happens when cross compiling for aarch64. Due to recent changes (JDK-8239799), cross builds would create a VM that runs on the compiling host (the interim-image) with CDS enabled but JVMTI disabled. Running the interim image causes this assert:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (open/src/hotspot/share/classfile/systemDictionary.cpp:2029), pid=11379, tid=11380
      # assert(JvmtiExport::is_early_phase()) failed: All well known classes must be resolved in JVMTI early phase
      #
      # JRE version: (15.0) (slowdebug build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 15-internal+0-2020-02-28-2300549.mikael.vidstedt.jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xcc7896] SystemDictionary::resolve_well_known_classes(Thread*)+0x41e

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: