8240267: VM fails to start with CDS enabled but JVMTI disabled

Reviewed-by: dholmes